--- a/index.html
+++ b/index.html
@@ -184,28 +184,36 @@
                 />
                 <h3 class="small-header-index">John Doe</h3>
                 <h4 class="photo-text">Product designer</h4>
-                <div class="icons-social-media">
-                  <div class="icon-social-media">
-                    <svg class="icon-sm" width="44" height="44">
-                      <use href="images/icons.svg#icon-ellipse_mk"></use>
-                    </svg>
-                  </div>
-                  <div class="icon-social-media">
-                    <svg class="icon-sm" width="44" height="44">
-                      <use href="images/icons.svg#icon-ellipse_mk_t"></use>
-                    </svg>
-                  </div>
-                  <div class="icon-social-media">
-                    <svg class="icon-sm" width="44" height="44">
-                      <use href="images/icons.svg#icon-ellipse_mk_f"></use>
-                    </svg>
-                  </div>
-                  <div class="icon-social-media">
-                    <svg class="icon-sm" width="44" height="44">
-                      <use href="images/icons.svg#icon-ellipse_mk_in"></use>
-                    </svg>
-                  </div>
-                </div>
+                <ul class="icons-social-media list">
+                  <li class="icon-social-media">
+                    <a>
+                      <svg class="icon-sm" width="44" height="44">
+                        <use href="images/icons.svg#icon-ellipse_mk"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-social-media">
+                    <a>
+                      <svg class="icon-sm" width="44" height="44">
+                        <use href="images/icons.svg#icon-ellipse_mk_t"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-social-media">
+                    <a>
+                      <svg class="icon-sm" width="44" height="44">
+                        <use href="images/icons.svg#icon-ellipse_mk_f"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-social-media">
+                    <a>
+                      <svg class="icon-sm" width="44" height="44">
+                        <use href="images/icons.svg#icon-ellipse_mk_in"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </li>
               <li class="white designers-photo">
                 <img
@@ -216,28 +224,36 @@
                 />
                 <h3 class="small-header-index">John Doe</h3>
                 <h4 class="photo-text">Frontend Developer</h4>
-                <div class="icons-social-media">
-                  <div class="icon-social-media">
-                    <svg class="icon-sm" width="44" height="44">
-                      <use href="images/icons.svg#icon-ellipse_mk"></use>
-                    </svg>
-                  </div>
-                  <div class="icon-social-media">
-                    <svg class="icon-sm" width="44" height="44">
-                      <use href="images/icons.svg#icon-ellipse_mk_t"></use>
-                    </svg>
-                  </div>
-                  <div class="icon-social-media">
-                    <svg class="icon-sm" width="44" height="44">
-                      <use href="images/icons.svg#icon-ellipse_mk_f"></use>
-                    </svg>
-                  </div>
-                  <div class="icon-social-media">
-                    <svg class="icon-sm" width="44" height="44">
-                      <use href="images/icons.svg#icon-ellipse_mk_in"></use>
-                    </svg>
-                  </div>
-                </div>
+                <ul class="icons-social-media list">
+                  <li class="icon-social-media">
+                    <a>
+                      <svg class="icon-sm" width="44" height="44">
+                        <use href="images/icons.svg#icon-ellipse_mk"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-social-media">
+                    <a>
+                      <svg class="icon-sm" width="44" height="44">
+                        <use href="images/icons.svg#icon-ellipse_mk_t"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-social-media">
+                    <a>
+                      <svg class="icon-sm" width="44" height="44">
+                        <use href="images/icons.svg#icon-ellipse_mk_f"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-social-media">
+                    <a>
+                      <svg class="icon-sm" width="44" height="44">
+                        <use href="images/icons.svg#icon-ellipse_mk_in"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </li>
               <li class="white designers-photo">
                 <img
@@ -248,28 +264,36 @@
                 />
                 <h3 class="small-header-index">John Doe</h3>
                 <h4 class="photo-text">Marketing</h4>
-                <div class="icons-social-media">
-                  <div class="icon-social-media">
-                    <svg class="icon-sm" width="44" height="44">
-                      <use href="images/icons.svg#icon-ellipse_mk"></use>
-                    </svg>
-                  </div>
-                  <div class="icon-social-media">
-                    <svg class="icon-sm" width="44" height="44">
-                      <use href="images/icons.svg#icon-ellipse_mk_t"></use>
-                    </svg>
-                  </div>
-                  <div class="icon-social-media">
-                    <svg class="icon-sm" width="44" height="44">
-                      <use href="images/icons.svg#icon-ellipse_mk_f"></use>
-                    </svg>
-                  </div>
-                  <div class="icon-social-media">
-                    <svg class="icon-sm" width="44" height="44">
-                      <use href="images/icons.svg#icon-ellipse_mk_in"></use>
-                    </svg>
-                  </div>
-                </div>
+                <ul class="icons-social-media list">
+                  <li class="icon-social-media">
+                    <a>
+                      <svg class="icon-sm" width="44" height="44">
+                        <use href="images/icons.svg#icon-ellipse_mk"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-social-media">
+                    <a>
+                      <svg class="icon-sm" width="44" height="44">
+                        <use href="images/icons.svg#icon-ellipse_mk_t"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-social-media">
+                    <a>
+                      <svg class="icon-sm" width="44" height="44">
+                        <use href="images/icons.svg#icon-ellipse_mk_f"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-social-media">
+                    <a>
+                      <svg class="icon-sm" width="44" height="44">
+                        <use href="images/icons.svg#icon-ellipse_mk_in"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </li>
               <li class="white designers-photo">
                 <img
@@ -280,28 +304,36 @@
                 />
                 <h3 class="small-header-index">John Doe</h3>
                 <h4 class="photo-text">Ul designer</h4>
-                <div class="icons-social-media">
-                  <div class="icon-social-media">
-                    <svg class="icon-sm" width="44" height="44">
-                      <use href="images/icons.svg#icon-ellipse_mk"></use>
-                    </svg>
-                  </div>
-                  <div class="icon-social-media">
-                    <svg class="icon-sm" width="44" height="44">
-                      <use href="images/icons.svg#icon-ellipse_mk_t"></use>
-                    </svg>
-                  </div>
-                  <div class="icon-social-media">
-                    <svg class="icon-sm" width="44" height="44">
-                      <use href="images/icons.svg#icon-ellipse_mk_f"></use>
-                    </svg>
-                  </div>
-                  <div class="icon-social-media">
-                    <svg class="icon-sm" width="44" height="44">
-                      <use href="images/icons.svg#icon-ellipse_mk_in"></use>
-                    </svg>
-                  </div>
-                </div>
+                <ul class="icons-social-media list">
+                  <li class="icon-social-media">
+                    <a>
+                      <svg class="icon-sm" width="44" height="44">
+                        <use href="images/icons.svg#icon-ellipse_mk"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-social-media">
+                    <a>
+                      <svg class="icon-sm" width="44" height="44">
+                        <use href="images/icons.svg#icon-ellipse_mk_t"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-social-media">
+                    <a>
+                      <svg class="icon-sm" width="44" height="44">
+                        <use href="images/icons.svg#icon-ellipse_mk_f"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-social-media">
+                    <a>
+                      <svg class="icon-sm" width="44" height="44">
+                        <use href="images/icons.svg#icon-ellipse_mk_in"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </li>
             </ul>
           </div>
@@ -381,32 +413,31 @@
               </ul>
             </address>
           </div>
-          <div class="social-media-footer">
+          <ul class="social-media-footer">
             <h3 class="small-header-footer">DOŁĄCZ DO NAS</h3>
-            <div class="icons-social-media-footer">
-              <div class="icon-social-media-footer">
+            <li class="icons-social-media-footer">
+              <a class="icon-social-media-footer">
                 <svg class="icon-sm-footer" width="44" height="44">
                   <use href="images/icons.svg#icon-ellipse_mk"></use>
                 </svg>
-              </div>
-              <div class="icon-social-media-footer">
+              </a>
+              <a class="icon-social-media-footer">
                 <svg class="icon-sm-footer" width="44" height="44">
                   <use href="images/icons.svg#icon-ellipse_mk_t"></use>
                 </svg>
-              </div>
-              <div class="icon-social-media-footer">
+              </a>
+              <a class="icon-social-media-footer">
                 <svg class="icon-sm-footer" width="44" height="44">
                   <use href="images/icons.svg#icon-ellipse_mk_f"></use>
                 </svg>
-              </div>
-              <div class="icon-social-media-footer">
+              </a>
+              <a class="icon-social-media-footer">
                 <svg class="icon-sm-footer" width="44" height="44">
                   <use href="images/icons.svg#icon-ellipse_mk_in"></use>
                 </svg>
-              </div>
-            </div>
-          
-          </div>
+              </a>
+            </li>
+          </ul>
         </div>
       </div>
     </footer>
