--- a/portfolio.html
+++ b/portfolio.html
@@ -347,31 +347,31 @@
               </ul>
             </address>
           </div>
-          <div class="social-media-footer">
+          <ul class="social-media-footer">
             <h3 class="small-header-footer">DOŁĄCZ DO NAS</h3>
-            <div class="icons-social-media-footer">
-              <div class="icon-social-media-footer">
+            <li class="icons-social-media-footer">
+              <a class="icon-social-media-footer">
                 <svg class="icon-sm-footer" width="44" height="44">
                   <use href="images/icons.svg#icon-ellipse_mk"></use>
                 </svg>
-              </div>
-              <div class="icon-social-media-footer">
+              </a>
+              <a class="icon-social-media-footer">
                 <svg class="icon-sm-footer" width="44" height="44">
                   <use href="images/icons.svg#icon-ellipse_mk_t"></use>
                 </svg>
-              </div>
-              <div class="icon-social-media-footer">
+              </a>
+              <a class="icon-social-media-footer">
                 <svg class="icon-sm-footer" width="44" height="44">
                   <use href="images/icons.svg#icon-ellipse_mk_f"></use>
                 </svg>
-              </div>
-              <div class="icon-social-media-footer">
+              </a>
+              <a class="icon-social-media-footer">
                 <svg class="icon-sm-footer" width="44" height="44">
                   <use href="images/icons.svg#icon-ellipse_mk_in"></use>
                 </svg>
-              </div>
-            </div>
-          </div>
+              </a>
+            </li>
+          </ul>
         </div>
       </div>
     </footer>
